super clients add

--- a/index.html
+++ b/index.html
@@ -136,6 +136,28 @@
                     <p class="text-[#777]">Premium Quality that makes tea more elegant and more durable when you use it.</p>
              </div> 
         </section>
+        <!-- super client section -->
+        <section class="my-40">
+            <div class="bg-gradient-to-r from-[#FF8938] to-[#F00] rounded-xl px-16 py-24 flex flex-col lg:flex-row gap-12">
+                <div class="space-y-5">
+                    <h2 class="text-5xl font-extrabold text-white">Meet Our super <br>
+                    Clients
+                </h2>
+                <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                <button class="btn bg-white text-gradient-to-r from-[#FF8938] to-[rgb(255,0,0)]" >Show All</button>
+                </div>
+                <div>
+                    <!-- review -->
+                    <div class="p-10 rounded-lg bg-white relative ">
+                        <img class="absolute -left-10 -top-5" src="images/client.png" alt="">
+                        <p class="text-[#777]">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                        <h4 class="font-bold text-black mt-5">Ilham Yuda</h4>
+                        <p class="text-[#5D5A6F] font-medium">Businessman</p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
     </main>
     <!-- footer style -->
     <footer>
